appId: com.acorn.alist
---
- launchApp:
    appId: com.acorn.alist
    clearState: true
- assertVisible: "Continue anonymous"
- tapOn: "Continue anonymous"
- assertVisible: "Tap.*to add a new item"
